# CPP_chat-

./: PlatformClient和PlatformServer使用文档.md  README.md  mysql.sql
CPP_Chat/:  database.sql  Makefile  README.md  build_client.bat  clean.bat
CPP_Chat/src/client/: client.cpp  client.h  clientmain.cpp
CPP_Chat/src/common/: message.cpp  message.h
CPP_Chat/src/server/: database.cpp  database.h  main.cpp  server.cpp  server.h
platformClient/: CMakeLists.txt  client.json
platformClient/client/: CommunicateOP.cpp  CommunicateOP.h  Hash.cpp  Hash.h  RSAcrypto.cpp  RSAcrypto.h  RequestCodec.cpp  RequestCodec.h  RequestFactory.cpp  RequestFactory.h  RespondCodec.cpp  RespondCodec.h  RespondFactory.cpp  RespondFactory.h  SeckKeyNodeInfo.h  TcpSocket.cpp  TcpSocket.h  clientOP.cpp  clientOP.h  clientmain.cpp  message.pb.cc  message.pb.h
platformClient/interface/: AESCrypto.h  BaseShm.h  SecKeyShm.cpp  SecKeyShm.h  interface.cpp  interface.h
platformServer/: CMakeLists.txt
platformServer/interface/: AESCrypto.cpp  BaseShm.cpp  BaseShm.h  SecKeyShm.cpp  SecKeyShm.h  interface.cpp
platformServer/server/: Codec.cpp  Codec.h  CodecFactory.cpp  CodecFactory.h  Hash.cpp  RSAcrypto.cpp  RequestCodec.cpp  RequestCodec.h  RespondCodec.h  RespondFactory.cpp  SeckKeyNodeInfo.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  ThreadPool.cpp  ThreadPool.h  mainserver.cpp  message.proto  mysqlOP.cpp  mysqlOP.h  server.json  serverOP.cpp  serverOP.h
test文件夹/: test.txt  test2.txt
